--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Mobile Dev Course</string>
+    <string name="onboarding_view_pager_text_1">Осень 2021 г., СПбГУ</string>
+    <string name="onboarding_view_pager_text_2">Мы изучаем разработку под Android</string>
+    <string name="onboarding_view_pager_text_3">Добро пожаловать в команду</string>
 </resources>
