--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Mobile Dev Course</string>
+    <string name="bottom_navigation_title_news">Лента</string>
+    <string name="bottom_navigation_title_people">Люди</string>
+    <string name="bottom_navigation_title_likes">Лайки</string>
+    <string name="bottom_navigation_title_bookmarks">Закладки</string>
+    <string name="bottom_navigation_title_profile">Профиль</string>
 </resources>
