--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="onboarding_sign_up_button_text">Зарегистрироваться</string>
     <string name="sign_in_sign_in_button_text">Войти</string>
     <string name="sign_up_sign_up_button_text">Зарегистрироваться</string>
+    <string name="sign_in_email_text_layout_hint">Почта</string>
+    <string name="sign_in_password_text_layout_hint">Пароль</string>
+    <string name="sign_in_back_alert_dialog_text">Введенные данные пропадут</string>
+    <string name="sign_in_back_alert_dialog_cancel_button_text">Отмена</string>
+    <string name="sign_in_back_alert_dialog_ok_button_text">okayeg</string>
 </resources>
